ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1

metadata:
  name: prod-ingress
  namespace: prod-app-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - http:
       paths:
         - path: /app_one
           pathType: Prefix
           backend:
             service:
               name: app-one-svc
               port:
                 number: 3000
         - path: /app_two
           pathType: Prefix
           backend:
             service:
               name: app-two-svc
               port:
                 number: 3001
